<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:text="@string/Login_txtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edt_Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:text="@string/Login_txtClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edt_Clave"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/login_btnEntrar"
            android:text="@string/Login_btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#333"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:onClick="logueo" />
    </LinearLayout>
</ScrollView>